--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
       <div class="row">
         <div class="col-12">
           <nav class="main-nav">
+
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="./assets/images/logo.png" alt='Logo of Agora Tutorials' style="width: 250px; height: 100px;">
+              <img src="assets/images/logo/agora_logo.png" alt='Logo of Agora Tutorials' style="width: 200px; height: 80px;">
             </a>
             <!-- ***** Logo End ***** -->
 
@@ -56,9 +57,6 @@
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#about">About Us</a></li>
               <li class="scroll-to-section"><a href="#services">Services</a></li>
-              <!-- <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
-              <li class="scroll-to-section"><a href="#blog">Blog</a></li> 
-              <li class="scroll-to-section"><a href="#contact">Message Us</a></li>  -->
               <li class="scroll-to-section"><div class="main-red-button"><a href="#contact">Enroll Now</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
