Updated the index

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
           <div class="row">
             <div class="col-lg-6 align-self-center">
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <h6>Welcome to AGORA ...</h6>
+                <h6>Welcome to AGORA</h6>
                 <h2>Learn with <em>Tailored</em> &amp; <span>Holistic</span> tutorial services.</h2>
-                <p>AGORA tutoring services offer a wide range of services that aim to address the academic and pre-academic needs of every student. We provide both holistic and specific solutions that would allow students to be their best selves in the classroom.</p>
+                <p>AGORA offers a wide range of services that aim to address the academic and pre-academic needs of every student. We provide both holistic and specific solutions that would allow them to be their best selves in the classroom. </p>
                 <form id="search" action="#" method="GET">
                   <fieldset>
                     <input type="email" name="email" class="email" placeholder="Enter your email address ..." autocomplete="on" required>
@@ -103,40 +103,6 @@
         </div>
       </div>
     </div>
-  </div>
-
-  
-
-  <div id="about" class="about-us section">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,320L60,293.3C120,267,240,213,360,197.3C480,181,600,203,720,213.3C840,224,960,224,1080,218.7C1200,213,1320,203,1380,197.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
-
-    <div class="container">
-      <div class="row">
-
-        <div class="col-lg-4">
-          <div class="left-image wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <img src="assets/images/graphics/guy-studying.png" alt="a graphic illustration of a guy student studying">
-          </div>
-        </div>
-
-        <div class="col-lg-8 align-self-center">
-          <div class="services">
-            <div class="row">
-                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">  
-                  <div class="right-text">
-                    <h1>ABOUT US</h1>
-                    <p>AGORA tutoring services offer a wide range of services that aim to address the academic and pre-academic needs of every student. We provide both holistic and specific solutions that would allow students to be their best selves in the classroom. AGORA's mentors are equipped to handle students of different learning styles and levels.</p>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L40,165.3C80,171,160,181,240,176C320,171,400,149,480,128C560,107,640,85,720,69.3C800,53,880,43,960,64C1040,85,1120,139,1200,165.3C1280,192,1360,192,1400,192L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
-    
-
   </div>
 
   <div id="services" class="our-services section">
@@ -245,8 +211,8 @@
           <a href="#elite-learners-program">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.6s">
               <div class="hidden-content">
-                <h4>Elite Learner's Program</h4>
-                <p>ELPs are delivered on-demand prepare &amp prime you for your daily academic needs, from assignments, to exam preparations, &amp advanced lessons.</p>
+                <h4>Learners' Advantage Program</h4>
+                <p>LAPs are delivered on-demand prepare &amp prime you for your daily academic needs, from assignments, to exam preparations, &amp advanced lessons.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/graphics/ELP.png" alt="elite learners program graphic" style="transform: scale(3);">
@@ -263,7 +229,7 @@
       <div class="row">
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="section-heading">
-            <h2>Check Out The <em>Details</em> In Our Latest <span>Catalogue</span> of Products and Services</h2>
+            <h2>Check Out The <em>Details</em> In Our Latest <span>Catalog</span> of Products and Services</h2>
           </div>
         </div>
 
@@ -315,6 +281,38 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div id="about" class="about-us section">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,320L60,293.3C120,267,240,213,360,197.3C480,181,600,203,720,213.3C840,224,960,224,1080,218.7C1200,213,1320,203,1380,197.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-4">
+          <div class="left-image wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+            <img src="assets/images/graphics/guy-studying.png" alt="a graphic illustration of a guy student studying">
+          </div>
+        </div>
+
+        <div class="col-lg-8 align-self-center">
+          <div class="services">
+            <div class="row">
+                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">  
+                  <div class="right-text">
+                    <h1>ABOUT US</h1>
+                    <p>AGORA tutoring services offer a wide range of services that aim to address the academic and pre-academic needs of every student. We provide both holistic and specific solutions that would allow students to be their best selves in the classroom. AGORA's mentors are equipped to handle students of different learning styles and levels.</p>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L40,165.3C80,171,160,181,240,176C320,171,400,149,480,128C560,107,640,85,720,69.3C800,53,880,43,960,64C1040,85,1120,139,1200,165.3C1280,192,1360,192,1400,192L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
+    
+
   </div>
 
   <div id="contact" class="contact-us section">
