Fixed homepage and added email to

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/logo/agora_logo.png" alt='Logo of Agora Tutorials' style="width: 200px; height: 80px;">
+              <img src="assets/images/logo/agora_logo.png" alt='Logo of Agora Tutorials' style="max-width: 200px; max-height: 120px; width: auto; height: auto;">
             </a>
             <!-- ***** Logo End ***** -->
 
@@ -79,9 +79,10 @@
             <div class="col-lg-6 align-self-center">
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <h6>Welcome to AGORA</h6>
-                <h2>Learn with <em>Tailored</em> &amp; <span>Holistic</span> tutorial services.</h2>
+                <h2>Learn with <em>tailored</em> &amp; <span>holistic</span> tutorial services.</h2>
                 <p>AGORA offers a wide range of services that aim to address the academic and pre-academic needs of every student. We provide both holistic and specific solutions that would allow them to be their best selves in the classroom. </p>
-                <form id="search" action="#" method="GET">
+                
+                <form id="free-consult" action="#contact" method="GET">
                   <fieldset>
                     <input type="email" name="email" class="email" placeholder="Enter your email address ..." autocomplete="on" required>
                   </fieldset>
@@ -89,6 +90,7 @@
                     <button type="submit" class="main-button">Consult for free!</button>
                   </fieldset>
                 </form>
+
               </div>
             </div>
             <div class="col-lg-6">
@@ -115,8 +117,8 @@
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="section-heading">
-            <h2>Elevate your learning with us through <em>experienced tutoring</em> services &amp; <span>specialized advancement</span> programmes</h2>
-            <p>AGORA aims to augment and compliment your classroom experience, to further enrich and embold your education given the shift to online format of education in the foreseeable future. Plenty of both soft and technical skills are challenging to learn, but AGORA with its one-on-one and or small-group format, you can zoom in to topics or skills you want to develop further as you grow your academic path!</p>
+            <h2>Elevate your learning with us through <em>experienced tutoring</em> services &amp; <span>specialized advancement</span> programmes </h2>
+            <p>AGORA aims to augment and compliment your classroom experience, to further enrich and embolden your education given the shift to online format of education in the foreseeable future. Plenty of both soft and technical skills are challenging to learn, but AGORA with its one-on-one and or small-group format, you can zoom in on topics or skills you want to develop further as you move forward in your academic path! Do it with us! </p>
           </div>
           <div class="row">
             <div class="col-lg-12">
@@ -162,7 +164,7 @@
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2>See What AGORA <em>Offers</em> &amp; What We <span>Provide</span></h2>
+            <h2>See what AGORA <em>Offers</em> &amp; <span>Provide</span></h2>
           </div>
         </div>
       </div>
@@ -186,7 +188,7 @@
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
               <div class="hidden-content">
                 <h4>Research Writing</h4>
-                <p>AGORA's mentors will guide you on organizing your manuscript, presenting &amp elucidating your results, discussing your findings, citing your references, and so much more tips. </p>
+                <p>AGORA's mentors will guide you on organizing your manuscript, effectively presenting and explaining your findings, citing your references, and much more. </p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/graphics/research-writing.png" alt="research writing graphic" style="transform: scale(3);">
@@ -212,7 +214,7 @@
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.6s">
               <div class="hidden-content">
                 <h4>Learners' Advantage Program</h4>
-                <p>LAPs are delivered on-demand prepare &amp prime you for your daily academic needs, from assignments, to exam preparations, &amp advanced lessons.</p>
+                <p>LAPs are delivered on-demand to prepare and prime you for your daily academic needs: from homeworks, to exam preparations, and advanced lessons.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/graphics/ELP.png" alt="elite learners program graphic" style="transform: scale(3);">
@@ -229,7 +231,7 @@
       <div class="row">
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="section-heading">
-            <h2>Check Out The <em>Details</em> In Our Latest <span>Catalog</span> of Products and Services</h2>
+            <h2>Check Out The <em>Details</em> In Our Latest <span>Catalog</span> of Programs</h2>
           </div>
         </div>
 
@@ -241,9 +243,11 @@
             <div class="info">
               <div class="inner-content">
                 <h4>Research Proposal Writing</h4>
-                <p>Have an idea for research but unsure how to craft a compelling proposal? Going crazy trying to pin down the best title for your research? Too many ideas cluttering your brain? AGORA provides the “Research Proposal Writing” course for students across all levels who may need a guide in writing a coherent research framework. AGORA’s mentors will let you in on the tips and tricks of generating, sorting, and  designing research ideas, and finally, writing a definitive title. Designed as an enriching exchange between mentor and mentee, the course will help you articulate your ideas, convince a panel, and sharpen your critical thinking. Avail this program in either crash course or consultation format and give yourself a head start this coming academic year.  Inquire now to get started! </p>
+                <p>
+                  AGORA provides the "Research Proposal Writing" course to guide students across all levels through writing a coherent research framework. AGORA’s mentors will let you in on the tips and tricks of generating, sorting, and designing research ideas, and finally, writing a definitive title. The course will help you articulate your ideas, convince a panel, and sharpen your critical thinking. <a href="#contact">Schedule one now! </a>
+                </p>
                 <!-- <div class="main-blue-button">
-                  <a href="#">Discover More</a>
+                  <a href="#">Inquire Now</a>
                 </div> -->
               </div>
             </div>
@@ -255,23 +259,29 @@
               <li>
                 <div class="left-content align-self-center" id="research-writing">
                   <h4>Research Writing</h4>
-                  <p>Are you in your final year of school with the looming dread that is “RESEARCH” hanging over your diploma? Already have good research design and remarkable results but just can’t seem to piece it all together into a final manuscript? Or are you panicking at the very thought of writing a research paper that falls way beyond what was taught within the walls of your classroom? Worry not! AGORA provides “Research or Technical Paper Writing”, where mentors will guide you on organizing your manuscript, presenting your results, discussing your findings, and much more. Avail the course in crash course format and gain valuable insight in elucidating your results and their discussions, understanding which statistical techniques to employ, referencing and citation, and properly leveraging The Internet for your research. The consultation format allows you to schedule regular meetings with an AGORA subject-matter expert to personally guide you through any trouble spots you may encounter as you write your research paper. So, what are you waiting for? Reach out to us to get started!
+                  <p>
+                    The “Research or Technical Paper Writing” Program partners a student with an AGORA mentor to help guide them through organizing their manuscript, presenting their results, discussing their findings, among others. Avail the program in crash course format and gain valuable insight in elucidating results and findings, understanding appropriate statistical techniques, and properly leveraging The Internet for your research. The consultation format allows you to schedule with an AGORA subject-matter expert to personally guide you through any trouble spots the student may encounter as they write their research paper. <a href="#contact"> Start writing with us now! </a>
                   </p>
+
                 </div>
               </li>
 
               <li>
                 <div class="left-content align-self-center" id="academic-coaching">
                   <h4>Academic Coaching</h4>
-                  <p>Successful learners inherit the future. With this in mind, we designed a Triple-A Academic Coaching program(Assess, Achieve, Amplify) to not only equip the 21st century learners with the necessary skills but also enhance their gifts to lead them in a lifelong academic success. Find out more here! </p>
+                  <p>
+                    Our Triple-A Academic Coaching Program offers a holistic approach to academic success. Aside from equipping learners with the necessary skills for the 21st century, this program gives tips on choosing the right degree program, passing admission exams, and beyond. <a href="#contact"> Find out more here! </a>
+                  </p>
                 </div>
               </li>
 
               <li>
                 <div class="left-content align-self-center" id="elite-learners-program">
-                  <h4>Elite Learner's Program</h4>
-                  <p>You name it. We teach it. </br>
-                    Our Elite Learners Programs(ELP) are delivered by our professional and seasoned tutors on your demand to get you prepared and primed for your daily academic needs, from assignments, to exam preparations and advanced lessons. Be a part of it here! </p>
+                  <h4>Learner's Advantage Program</h4>
+                  <p>
+                    Our Learner’s Advantage Programs are delivered by experienced tutors to get learners of all ages ready for their academic needs. From assignments and papers to exam preparations and advanced lessons, our approach is specifically tailored to integrate each learner’s strengths. <a href="#contact"> Be a part of it here! </a>
+                  </p>
+                  </p>
                 </div>
               </li>
 
@@ -291,7 +301,7 @@
 
         <div class="col-lg-4">
           <div class="left-image wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <img src="assets/images/graphics/guy-studying.png" alt="a graphic illustration of a guy student studying">
+            <img src="assets/images/graphics/guy-student.png" alt="a graphic illustration of a guy student studying">
           </div>
         </div>
 
@@ -323,26 +333,41 @@
             <h2>Send us a Message to Consult and Know More of Our Services</h2>
             <p>Once we receive your email, we can schedule a call to discuss the specifics of your needs, or your child's needs, the schedule, and other relevant details for the delivery of the tutorial service.</p>
             <div class="phone-info">
-              <h4>For any enquiry, Call Us: <span><i class="fa fa-phone"></i> <a href="#">09215844244</a></span></h4>
+              <h4>For any enquiry, call us: <span><i class="fa fa-phone"></i> 09215844244 </span></h4>
+              <h4>Or send us a custom email throguh <span><i class="fa fa-envelope-o"></i> <a id="email-address" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=contact@agora-tutorials.com" target="_blank"> contact@agora-tutorials.com </a> </span></h4>
             </div>
           </div>
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="" method="post">
+          <form id="contact" action="https://formsubmit.co/contact@agora-tutorials.com" method="post">
             <div class="row">
               <div class="col-lg-6">
                 <fieldset>
-                  <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
+                  <input type="name" name="name" id="name" placeholder="First Name" autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-6">
                 <fieldset>
-                  <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
+                  <input type="surname" name="surname" id="surname" placeholder="Last Name" autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                  <input type="hidden" name="_next" value="https://agora-tutorials.com/pages/thank-you.html">
+                  <input type="hidden" name="_subject" value="New Program Inquiry!">
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <select name="program" id="program">
+                    <option value="">--Select program of interest--</option>
+                    <option value="Research Proposal Writing">Research Proposal Writing</option>
+                    <option value="Research Writing">Research Writing</option>
+                    <option value="Academic Coaching">Academic Coaching</option>
+                    <option value="Research Proposal Writing">Research Proposal Writing</option>
+                    <option value="Others">Others</option>
+                  </select>
                 </fieldset>
               </div>
               <div class="col-lg-12">
