--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="section-heading">
-            <h2>Elevate your learning with us through <em>experienced tutoring</em> services &amp; <span>specialized advancement</span> programmes </h2>
+            <h2>Elevate your learning with us through <em>experienced tutoring</em> services &amp; <span>specialized advancement</span> programs </h2>
             <p>AGORA aims to augment and compliment your classroom experience, to further enrich and embolden your education given the shift to online format of education in the foreseeable future. Plenty of both soft and technical skills are challenging to learn, but AGORA with its one-on-one and or small-group format, you can zoom in on topics or skills you want to develop further as you move forward in your academic path! Do it with us! </p>
           </div>
           <div class="row">
