--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <p>Once we receive your email, we can schedule a call to discuss the specifics of your needs, or your child's needs, the schedule, and other relevant details for the delivery of the tutorial service.</p>
             <div class="phone-info">
               <h4>For any enquiry, call us: <span><i class="fa fa-phone"></i> 09215844244 </span></h4>
-              <h4>Or send us a custom email throguh <span><i class="fa fa-envelope-o"></i> <a id="email-address" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=contact@agora-tutorials.com" target="_blank"> contact@agora-tutorials.com </a> </span></h4>
+              <h4>Or send us a custom email through <span><i class="fa fa-envelope-o"></i> <a id="email-address" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=contact@agora-tutorials.com" target="_blank"> contact@agora-tutorials.com </a> </span></h4>
             </div>
           </div>
         </div>
